# dparse

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  conftest.py  hatch.toml  pyproject.toml  requirements_dev.txt  sandbox.py  setup.cfg  setup.py  test-requirements.txt  test_requirements.txt  tox.ini  travis_pypi_setup.py
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: 01_BUG_REPORT.md
.github/workflows/: ci.yml  code_analysis.yml  labels.yml  main.yml  pr-labels.yml  release.yml
.pytest_cache/v/cache/: lastfailed  nodeids
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
dparse/: __init__.py  dependencies.py  errors.py  filetypes.py  parser.py  regex.py  updater.py
tests/: __init__.py  test_dependencies.py  test_dparse.py  test_parse.py  test_updater.py
